[package]
name = "float-format"
author = ["lioqing"]
version = "0.1.0"
edition = "2021"
description = "A library for custom floating point number format"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "^1.0"
thiserror = "^1.0"
