[package]
name = "float-format"
author = ["lioqing"]
version = "0.1.1"
edition = "2021"
description = "A library for custom floating point number format"
keywords = ["float", "format", "layout", "custom", "number"]
categories = ["encoding", "mathematics", "data-structures", "memory-management"]
repository = "https://github.com/LioQing/float-format"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "^1.0"
thiserror = "^1.0"
num-traits = "^0.2"
derivative = "^2.2"
fraction = { version = "^0.10", features = ["with-bigint"] }
