[package]
name = "float-format"
author = ["lioqing"]
version = "0.1.3"
edition = "2021"
description = "A library for custom floating point number format"
keywords = ["float", "format", "layout", "custom", "number"]
categories = ["encoding", "mathematics", "data-structures", "memory-management"]
repository = "https://github.com/LioQing/float-format"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
thiserror = "1.0.31"
num-traits = "0.2.15"
derivative = "2.2.0"
fraction = { version = "0.10.0", features = ["with-bigint"] }
